adding the notebook and resulting csv for paper import

--- a/indexing_data.ipynb
+++ b/indexing_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,22 +39,14 @@
    "outputs": [],
    "source": [
     "Entrez.api_key = \"\" # if you don´t have an API-Key just use ur email-adress beneath\n",
-    "Entrez.email = \"dummy.email@adress.en\""
+    "Entrez.email = \"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter a query: microbiome obesity\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "query = input(\"Enter a query: \") # enter the query you want to retrieve papers to"
    ]
@@ -74,7 +66,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flat_pubmed_idlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,11 +99,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df[[\"TI\", \"AB\", \"AID\"]]"
+    "df = df[[\"TI\", \"AID\", \"AUID\", \"JT\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns = {\"TI\" : \"paper:title\", \"AID\" : \"paper:DOI\", \"AUID\" : \"paper:authors\", \"JT\" : \"HAS_VENUE\"})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adding research_field and research_problem manually"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"paper:research_field\"] = \"\"\n",
+    "df[\"contribution:research_problem\"] = \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"paper:research_field\"][0] = [\"R84\"] \n",
+    "df[\"paper:research_field\"][1] = [\"R84\"]\n",
+    "df[\"paper:research_field\"][2] = [\"R84\"]\n",
+    "df[\"paper:research_field\"][3] = [\"R84\"]\n",
+    "df[\"paper:research_field\"][4] = [\"R52\"]\n",
+    "df[\"paper:research_field\"][5] = [\"R52\"]\n",
+    "df[\"paper:research_field\"][6] = [\"R56\"]\n",
+    "df[\"paper:research_field\"][7] = [\"R84\"]\n",
+    "df[\"paper:research_field\"][8] = [\"R84\"]\n",
+    "df[\"paper:research_field\"][9] = [\"R52\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"contribution:research_problem\"][0] = [\"Effect of low dietry fiber on Crohn´s disease\"]\n",
+    "df[\"contribution:research_problem\"][1] = [\"Short fatty acids as a therapeutical target in management of liver diseases\"]\n",
+    "df[\"contribution:research_problem\"][2] = [\"Effects of obesity-induced insulin resistance\"]\n",
+    "df[\"contribution:research_problem\"][3] = [\"Gut microbiome difference of breast-fed versus formula-fed infants\"]\n",
+    "df[\"contribution:research_problem\"][4] = [\"Effect of limonite on diabetes mellitus\"]\n",
+    "df[\"contribution:research_problem\"][5] = [\"Connection between gut microbiota and brain disease\"]\n",
+    "df[\"contribution:research_problem\"][6] = [\"Connection between microbiota and, the immune system and metabolic disorders\"]\n",
+    "df[\"contribution:research_problem\"][7] = [\"Effect of Ligilactobacillus salivarius on obesity\"]\n",
+    "df[\"contribution:research_problem\"][8] = [\"Effect of Butyrat on obestiy related anxiety-like disorders\"]\n",
+    "df[\"contribution:research_problem\"][9] = [\"Effect of gut microbiota on Idiopathic intracranial hypertension syndrome\"]"
    ]
   },
   {
@@ -110,7 +173,7 @@
    "metadata": {},
    "source": [
     "# Adding triples manually\n",
-    "The ORKG works with triples based on the Human Disease Ontology. SO we have to add them manually since there are no pythonmoduls or NLP software to do so."
+    "The ORKG works with triples based on the Human Disease Ontology. So we have to add them manually since there are no pythonmoduls or NLP software to do so."
    ]
   },
   {
@@ -128,21 +191,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[\"keywords\"][0] = [\"microbial colonization\", \"influences\", \"liver\"] \n",
-    "df[\"keywords\"][1] = [\"commensal microbiota\", \"promoting\", \"Inflammatory bowel disease\"]\n",
-    "df[\"keywords\"][2] = [\"high fat-diet\", \"causes\", \"weight gain\"]\n",
+    "df[\"keywords\"][0] = [\"dietry fiber\", \"promotes\", \"Crohn's disease\"]\n",
+    "df[\"keywords\"][1] = [\"obesity\", \"promotes\", \"liver diseases\"]\n",
+    "df[\"keywords\"][2] = [\"high fat-diet\", \"causes\", \"obesity\"]\n",
     "df[\"keywords\"][3] = [\"gut microbiota\", \"influences\", \"diabetes\"]\n",
-    "df[\"keywords\"][4] = [\"dietry calcium\", \"decreases\", \"obesity\"]\n",
-    "df[\"keywords\"][5] = [\"low carb diet\", \"reduces\", \"Enterobacteriaceae\"]\n",
-    "df[\"keywords\"][6] = [\"Trimethylamin-N-Oxid\", \"cause\", \"arrhythmia\"]\n",
-    "df[\"keywords\"][7] = [\"probiotic bound ACE-2 delivery\", \"harms\", \"SARS-CoV-2\"]\n",
-    "df[\"keywords\"][8] = [\"gut virome\", \"infuences\", \"obesity\"]\n",
-    "df[\"keywords\"][9] = [\"early pubertal\", \"causes\", \"obesity\"]"
+    "df[\"keywords\"][4] = [\"limonite intake\", \"decreases\", \"obesity\"]\n",
+    "df[\"keywords\"][5] = [\"gut\", \"influences\", \"brain\"]\n",
+    "df[\"keywords\"][6] = [\"NOD-1\", \"promotes\", \"obesity\"]\n",
+    "df[\"keywords\"][7] = [\"LCK11\", \"prevents\", \"obesity\"]\n",
+    "df[\"keywords\"][8] = [\"obesity\", \"influences\", \"anxiety disorder\"]\n",
+    "df[\"keywords\"][9] = [\"obesity\", \"causes\", \"pseudotumor cerebri\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,82 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = orkg.resources.get()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://www.orkg.org/orkg/api/resources/'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.succeeded # now we are connected to the ORKG Backend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "200"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.status_code"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# with this code we finally push the dataset into the ORKG\n",
-    "datasetID = orkg.resources.save_dataset(file=\"microbiome_obesity.csv\", label=\"Papers about obesity\", dimensions=[\"AID\"])\n",
-    "datasetID"
+    "orkg.papers.add_csv(file = \"papers_about_obesity.csv\")"
    ]
   }
  ],
